--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "^16.7.0-alpha.2",
     "react-native": "0.57.5",
-    "react-native-video": "^4.0.1"
+    "react-native-video": "^4.0.1",
+    "react-native-video-component": "^0.0.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
